@@ -99,7 +99,7 @@ remove all intermediate files generated by latex2html (prevents caching!)
 .B \-\-l2h\-skip
 Do not really run latex2html. Use (kept) files of previous runs, instead.
 .TP
-.B \-\-Verbose
+.B \-\-verbose
 Give a verbose output. 
 .TP
 .B \-\-version
